Origin: few qol & code safety, projectiles